added german translation

--- a/Distribution/GameData/JSI/JSIAdvTransparentPods/Localization.cfg
+++ b/Distribution/GameData/JSI/JSIAdvTransparentPods/Localization.cfg
@@ -105,3 +105,20 @@ Localization
 		#autoLOC_JISATP_00011 = Turn this On to have transparent Pods on all Loaded vessels (not just the active vessel), if Off only the Active Vessel will be transparent.
 	}
 }
+Localization
+{
+	de-de
+	{
+		#autoLOC_JISATP_00001 = AN
+		#autoLOC_JISATP_00002 = AUS
+		#autoLOC_JISATP_00003 = AUTO
+		#autoLOC_JISATP_00004 = Die Fenster dieses Kapsel habe eine ordentliche Reinigung erhalten
+		#autoLOC_JISATP_00005 = Transparente Kapseln
+		#autoLOC_JISATP_00006 = JSI Erweiterte Transparente Kapseln Optionen
+		#autoLOC_JISATP_00007 = JSI Erw Trans Kapseln
+		#autoLOC_JISATP_00008 = Extra Debug Logging
+		#autoLOC_JISATP_00009 = Schalte diese Option an damit extra Informationen in das Log geschrieben werden, um Fehler zu melden.
+		#autoLOC_JISATP_00010 = Transparente Kapseln für geladene Raumfahrzeuge 
+		#autoLOC_JISATP_00011 = Schalte diese Option ein, um in allen geladenen Raumfahrzeugen transparente Fenster zu haben (nicht nur in dem aktiven Raumfahrzeug). Wenn ausgeschaltet hat nur das aktive Raumfahrzeug transparente Fenster.
+	}
+}
